--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 bnr.sh
-frontendBuild/*
-frontend/node_modules/*
-backend/node_modules/*
+frontendBuild
+frontend/node_modules
+frontend/build
+backend/node_modules
 backend/logs/*
 backend/schema.sql
