--- a/frontend/.svelte-kit/output/client/.vite/manifest.json
+++ b/frontend/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.CR5afzgS.js",
+    "file": "_app/immutable/entry/app.qgxNeoAw.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -25,7 +25,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.BF3jpwz7.js",
+    "file": "_app/immutable/nodes/0.CQGUgPKA.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
@@ -36,11 +36,11 @@
       "_D0ZtbyZs.js"
     ],
     "css": [
-      "_app/immutable/assets/0.BFzDEBdp.css"
+      "_app/immutable/assets/0.wiSZnjME.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.BlWhrW_P.js",
+    "file": "_app/immutable/nodes/1.Bh0hPg9g.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -50,7 +50,7 @@
       "_CJLlioOO.js",
       "_D8DXxAzd.js",
       "_BKyUyGuO.js",
-      "_0LeEebEo.js"
+      "_BMWYtcrf.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -72,7 +72,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/3.js": {
-    "file": "_app/immutable/nodes/3.CuXyA7Lt.js",
+    "file": "_app/immutable/nodes/3.dUZ6w5V6.js",
     "name": "nodes/3",
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js",
     "isEntry": true,
@@ -87,7 +87,7 @@
       "_0VhW8u6o.js",
       "_7L7bas56.js",
       "_Dfmw8iVc.js",
-      "_0LeEebEo.js",
+      "_BMWYtcrf.js",
       "_CCDyYBUC.js"
     ],
     "css": [
@@ -156,7 +156,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/7.js": {
-    "file": "_app/immutable/nodes/7.bRnRVC7C.js",
+    "file": "_app/immutable/nodes/7.Ciq7zEbK.js",
     "name": "nodes/7",
     "src": ".svelte-kit/generated/client-optimized/nodes/7.js",
     "isEntry": true,
@@ -194,15 +194,6 @@
       "_app/immutable/assets/8.Dax9h0Dh.css"
     ]
   },
-  "_0LeEebEo.js": {
-    "file": "_app/immutable/chunks/0LeEebEo.js",
-    "name": "entry",
-    "imports": [
-      "_CnBhPSvY.js",
-      "_B3V4Vxzd.js",
-      "_D8DXxAzd.js"
-    ]
-  },
   "_0VhW8u6o.js": {
     "file": "_app/immutable/chunks/0VhW8u6o.js",
     "name": "events",
@@ -230,6 +221,15 @@
     "imports": [
       "_D8DXxAzd.js",
       "_0VhW8u6o.js"
+    ]
+  },
+  "_BMWYtcrf.js": {
+    "file": "_app/immutable/chunks/BMWYtcrf.js",
+    "name": "entry",
+    "imports": [
+      "_CnBhPSvY.js",
+      "_B3V4Vxzd.js",
+      "_D8DXxAzd.js"
     ]
   },
   "_BS0-grPP.js": {
@@ -305,12 +305,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.eGTmHEWG.js",
+    "file": "_app/immutable/entry/start.m_YevFOH.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_0LeEebEo.js"
+      "_BMWYtcrf.js"
     ]
   }
 }
