--- a/frontend/.svelte-kit/output/server/.vite/manifest.json
+++ b/frontend/.svelte-kit/output/server/.vite/manifest.json
@@ -122,7 +122,7 @@
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "css": [
-      "_app/immutable/assets/_layout.Bq2XgVUG.css"
+      "_app/immutable/assets/_layout.CTFahTsx.css"
     ]
   },
   "src/routes/+page.svelte": {
