--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "svelte": "^5.43.14",
+    "svelte-adapter-bun": "^1.0.1",
     "svelte-check": "^4.3.4",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
